Set#forEach does not pass "key" or "set" arguments to callback. https://bugs.webkit.org/show_bug.cgi?id=144188

Patch by Jordan Harband <ljharb@gmail.com> on 2015-04-26
Reviewed by Darin Adler.

Per https://people.mozilla.org/~jorendorff/es6-draft.html#sec-set.prototype.foreach
Set#forEach should pass 3 arguments to the callback.

* runtime/SetPrototype.cpp:
(JSC::setProtoFuncForEach):

Canonical link: https://commits.webkit.org/162235@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183371 268f45cc-cd09-0410-ab3c-d52691b4dbfc